...
import 'package:flutter_bloc/flutter_bloc.dart';
import 'package:core/domains/domains.dart';

class ChatDialog extends StatefulWidget {
  final ChatRoom chatRoom;

  ChatDialog(this.chatRoom);

  @override
  _ChatState createState() => _ChatState();
}

class _ChatState extends State<ChatDialog> {
...
